# judge-audit-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  smoke_test.py
fixtures/: generate.py
fixtures/calibration/: human_labels.jsonl  human_labels_noisy.jsonl  judge.jsonl  judge_good.jsonl
fixtures/drift/: anchors.txt  run_clean_v1.jsonl  run_clean_v2.jsonl  run_v1.jsonl  run_v1_nofingerprint.jsonl  run_v2.jsonl  run_v2_nofingerprint.jsonl
fixtures/messy/: different_names.csv  nested.jsonl  no_id.jsonl  wrapped.json
fixtures/probes/: distribution_collapsed.jsonl  distribution_constant.jsonl  distribution_healthy.jsonl  length_biased_human.jsonl  length_biased_judge.jsonl  length_innocent_human.jsonl  length_innocent_judge.jsonl  position.jsonl  position_clean.jsonl  sycophancy.jsonl  verbosity.jsonl
fixtures/self-preference/: human_labels.jsonl  judge.jsonl  judge_neutral.jsonl
judge_audit_mcp/: __init__.py  calibrate.py  cli.py  drift.py  emit.py  io.py  live.py  models.py  server.py  stats.py
judge_audit_mcp/probes/: __init__.py  distribution.py  length_confound.py  position.py  self_preference.py  sycophancy.py  verbosity.py
